--- a/public/app.html
+++ b/public/app.html
@@ -3,9 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-	<link rel="icon" type="image/png" href="img/decode.png">	
+	<link rel="icon" type="image/png" href="images.png">	
 	<link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-	<title>{{title}}</title>
+	<title>moral</title>
 
 	<!-- <link rel="stylesheet" href="css/bootstrap.css"> -->
 	<link rel="stylesheet" href="css/materialize.css">
